deployments/app.yaml
# Common Kubernetes configuration for the Chatter application.
# Should not include any configuration specific to particular
# infrastructure implementation such as Minkube or GKE.

# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chatter-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "chatter-ip"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: chatter.technology
    http: &http_rules
      paths:
      - path: /(api/rooms/.*)
        backend:
          serviceName: chatter-rooms-service
          servicePort: 80
      - path: /(.*)
        backend:
          serviceName: chatter-frontend-service
          servicePort: 80
  - host: "*.chatter.technology"
    http: *http_rules

---

# Frontend service.
kind: Service
apiVersion: v1
metadata:
  name: chatter-frontend-service
spec:
  type: NodePort
  selector:
    app: chatter-frontend-service
  ports:
  - port: 80

---

# Frontend service deployment.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatter-frontend-deployment
  labels:
    app: chatter
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: chatter-frontend-service
  template:
    metadata:
      labels:
        app: chatter-frontend-service
    spec:
      containers:
      - name: chatter-frontend-service
        image: dgp1130/chatter-frontend-service
        ports:
        - containerPort: 80
        # Trivial service with trivial QPS. Remove minimum CPU requirements because I'm cheap.
        resources:
          limits:
            cpu: "0.1"
          requests:
            cpu: "0"
